simpleapp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kuernetes.io/name: development
  name: development
