simpleapp/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleapp-deployment
  labels:
    app: simpleapp-label
  namespace: development
spec:
  replicas: 0
  selector:
    matchLabels:
      app: simpleapp-label
  template:
    metadata:
      labels:
        app: simpleapp-label
    spec:
      containers:
      - name: daniel
        image: ctmnz/simpleapp:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
