simpleapp/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: simpleapp-service
  namespace: development
spec:
apiVersion: networking.k8s.io/v1
  selector:
    app: simpleapp-app-label
  ports:
    - port: 5000
